# miniconf

./: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt
